<resources>
    <string name="app_name">PlayGround</string>
    <string name="main_background">Main Background</string>
    <string name="main_logo">Main Logo</string>
    <string name="my_play_ground">PLAY GROUND</string>
    <string name="weekend_gataway">Where the fun begins</string>
    <string name="find_a_group_to_play">Find a group to play</string>
    <string name="get_started">GET STARTED</string>
    <string name="league_image">LeagueImage</string>
    <string name="select_the_group">Select the group</string>
    <string name="men">MEN</string>
    <string name="WOMEN">WOMEN</string>
    <string name="ALL">ALL</string>
    <string name="next">NEXT</string>
    <string name="skill_background">skillBackground</string>
    <string name="select_your_level">Select Your level?</string>
    <string name="beginner">BEGINNER</string>
    <string name="expert">EXPERT</string>
    <string name="finish">FINISH</string>
    <string name="final_image_background">final image background</string>
</resources>
